--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -19,4 +19,4 @@ suites:
         config_path:  /etc/berkshelf/api-server/config.json
       chef_client:
         config:
-          chef_server_url: https://example.conf
+          chef_server_url: https://example.com
