--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,14 +1,8 @@
 ---
-driver:
-  name: vagrant
-
 provisioner:
   name: chef_solo
   data_bags_path: test/integration/data_bags
   encrypted_data_bag_secret_key_path: test/integration/encrypted_data_bag_secret
-
-platforms:
-  - name: centos-6.5
 
 suites:
   - name: default
@@ -16,7 +10,7 @@ suites:
       - recipe[osl-berkshelf-api::default]
     attributes:
       berkshelf_api:
-        config_path:  /etc/berkshelf/api-server/config.json
+        config_path: "/etc/berkshelf/api-server/config.json"
       chef_client:
         config:
           chef_server_url: https://example.com
